Cadastro e exclusão de informações de pessoas e animais, utilizando os frameworks Hibernate e Primefaces.

--- a/web/cadastro_pessoa.xhtml
+++ b/web/cadastro_pessoa.xhtml
@@ -115,7 +115,7 @@
                             <p:growl id="growl" life="2000" />
                             </td>
                     <td>
-                        <p:commandButton value="Cadastrar" id="ajax" update="growl" actionListener="#{pessoaView.buttonAction}" styleClass="ui-priority-primary" />
+                        <p:commandButton value="Cadastrar" id="ajax" update="growl" actionListener="#{pessoaView.cadastrarPessoa}" styleClass="ui-priority-primary" />
                     </td>
                 </tr>
             </table> 
